first review fixed, overflow text not working

--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -13,40 +13,3 @@
   padding: 0;
   margin: 0;
 }
-
-.card {
-  display: flex;
-  border-radius: 10px;
-  flex-direction: column;
-  list-style: none;
-  overflow: hidden;
-}
-
-.card__image {
-  width: 282px;
-  height: 282px;
-}
-
-.card__description {
-  display: flex;
-  background-color: white;
-  color: black;
-  padding: 25px 20px;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.card__title {
-  /* overflow text */
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  max-width: 100%;
-}
-
-.card__like-button {
-  background: transparent url(../images/like-inactive.svg) center no-repeat;
-  width: 21px;
-  height: 18px;
-  border: none;
-}
