--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -3,6 +3,7 @@
 }
 
 .footer__tag {
+  margin: 0;
   padding-top: 85px;
   padding-bottom: 60px;
   font-family: Inter, Arial, Helvetica, sans-serif;
